--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     "strict": true,
     "checkJs": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "declaration": true,
+    "emitDeclarationOnly": true
   }
 }
