--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "keywords": [],
   "main": "/index.mjs",
+  "scripts": {
+    "serve": "http-server --cors --port 8808",
+    "ngrok": "ngrok http 8808",
+    "init-mac": "npm i -g http-server && brew cask install ngrok"
+  },
   "dependencies": {
     "serve": "^11.3.2"
   },
